# ChangeLog for app-editors/gvim
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/ChangeLog,v 1.221 2007/03/21 16:03:48 wolf31o2 Exp $

  21 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> gvim-7.0.174.ebuild:
  Stable on alpha/ia64 wrt bug #167816.

  26 Feb 2007; Daniel Gryniewicz <dang@gentoo.org> gvim-7.0.174.ebuild:
  Marked stable on amd64 For bug #167816

*gvim-7.0.201 (24 Feb 2007)

  24 Feb 2007; Mike Kelly <pioto@gentoo.org> +gvim-7.0.201.ebuild:
  Version bump.

  21 Feb 2007; Markus Rothe <corsair@gentoo.org> gvim-7.0.174.ebuild:
  Stable on ppc64; bug #167816

  21 Feb 2007; Christian Faulhammer <opfer@gentoo.org> gvim-7.0.174.ebuild:
  added ~x86; bug 167816

  21 Feb 2007; Joseph Jezak <josejx@gentoo.org> gvim-7.0.174.ebuild:
  Marked ppc stable for bug #167816.

  21 Feb 2007; Ferris McCormick <fmccor@gentoo.org> gvim-7.0.174.ebuild:
  Stable on sparc --- Bug #167816

  18 Feb 2007; Markus Rothe <corsair@gentoo.org> gvim-7.0.91.ebuild:
  Stable on ppc64

  03 Dec 2006; Jeroen Roovers <jer@gentoo.org> gvim-7.0.91.ebuild:
  Stable for HPPA.

*gvim-7.0.174 (30 Nov 2006)

  30 Nov 2006; Mike Kelly <pioto@gentoo.org> +gvim-7.0.174.ebuild:
  Version bump.

  25 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> gvim-7.0.91.ebuild:
  Stable on sparc

  24 Oct 2006; Mike Kelly <pioto@gentoo.org> gvim-7.0.146.ebuild:
  Dropping ppc-macos keyword, since eselect-1.0.6 isn't keyworded for it,
  either.

*gvim-7.0.146 (23 Oct 2006)

  23 Oct 2006; Mike Kelly <pioto@gentoo.org> -gvim-7.0.109.ebuild,
  +gvim-7.0.146.ebuild:
  Version bump.

  19 Oct 2006; Aron Griffis <agriffis@gentoo.org> gvim-7.0.91.ebuild:
  Mark 7.0.91 stable on ia64

  18 Oct 2006; Aron Griffis <agriffis@gentoo.org> gvim-7.0.91.ebuild:
  Mark 7.0.91 stable on alpha

  05 Oct 2006; Aron Griffis <agriffis@gentoo.org> gvim-7.0.17.ebuild:
  Mark 7.0.17 stable on ia64
