@@ -1,14 +1,19 @@
 DIST vim-7.0-gentoo-patches-r1.tar.bz2 6749 RMD160 88cead14b07bc3b7113a3e60f2b358caf501c789 SHA1 694d7567a7100478083207a77c0282365e3b4581 SHA256 17934badbe1288149a31ac309c17b579a0c33a409b5928a759620631c4a1ec7c
 DIST vim-7.0-r1.tar.bz2 6117202 RMD160 d24982a1b802dad9955940365665163a4641fd74 SHA1 cac7d8980804dff1a3615e0e6a0bdc07cbe31b53 SHA256 e7383b2dfdc6f6df52fb45599eb6c5dc9037b1d3a4077bfe770cb98440b2589e
 DIST vim-patches-7.0.201.tar.gz 291618 RMD160 62bcbd2a6ae0d1967e18eb62523c0141adce1c36 SHA1 eb36b79e301c495a0afe195258cf324c67d9ada2 SHA256 031444112de567319e730b1de48fbb3188a0c843350840cd951c51d9d39c1ad6
+DIST vim-patches-7.0.235.tar.gz 343289 RMD160 c54e63fbc74250e95d2ba242a66cea99ffffeff1 SHA1 6d95f9b4e3ce2c1a45863d73b85a3481ca386cd1 SHA256 0833aae00440155a6b5c507ecdcc00b743889c578b47a967fc4ae9ea456d5779
 EBUILD gvim-7.0.201.ebuild 1089 RMD160 b729d6c826e2b85b0325dc0952a650f58a643e5f SHA1 7bcfd80b54b2480eba50bace6788f1e24bb12538 SHA256 91ddad81535ed5be5895e29dc4b5dce6b33fc760980b698584b61e4e681cbd7a
 MD5 ba830aa6a38782bcded94ac4871db733 gvim-7.0.201.ebuild 1089
 RMD160 b729d6c826e2b85b0325dc0952a650f58a643e5f gvim-7.0.201.ebuild 1089
 SHA256 91ddad81535ed5be5895e29dc4b5dce6b33fc760980b698584b61e4e681cbd7a gvim-7.0.201.ebuild 1089
-MISC ChangeLog 30459 RMD160 4c57c32849192cad6f30e20acc82435bea21fd7a SHA1 6f54c57e56ef06596412667260762abe9429eeef SHA256 6cb3d904d81bfed570277e0cb3552a13ac8c2cef3a0a31e0c6f8f3c4b234a451
-MD5 a5898cf1ab3bdd1a45f5003a4f8e51d3 ChangeLog 30459
-RMD160 4c57c32849192cad6f30e20acc82435bea21fd7a ChangeLog 30459
-SHA256 6cb3d904d81bfed570277e0cb3552a13ac8c2cef3a0a31e0c6f8f3c4b234a451 ChangeLog 30459
+EBUILD gvim-7.0.235.ebuild 1089 RMD160 90c5b0b3acde5d70be4d844937631ca9c9cdd59b SHA1 e43bd84c4cdf751a9c74cd15a60ef61e884516e4 SHA256 a3360132a174d56031748d2e1b6ab96495593a78e5541d464c758b756f511614
+MD5 1a84bf39591d33bd93fbf6725ab209ba gvim-7.0.235.ebuild 1089
+RMD160 90c5b0b3acde5d70be4d844937631ca9c9cdd59b gvim-7.0.235.ebuild 1089
+SHA256 a3360132a174d56031748d2e1b6ab96495593a78e5541d464c758b756f511614 gvim-7.0.235.ebuild 1089
+MISC ChangeLog 30595 RMD160 011e4a5ac349651d6e75f4926cde5faaa911ebdd SHA1 7c4fcc8b4ee71917de0cfb93569e7d5a123c21ed SHA256 eb3108c90f88e0fb98bd1f131c8fd60a51869e56320056e83524f991c00d90b8
+MD5 fd534370d2027ae05af6750ee09c340d ChangeLog 30595
+RMD160 011e4a5ac349651d6e75f4926cde5faaa911ebdd ChangeLog 30595
+SHA256 eb3108c90f88e0fb98bd1f131c8fd60a51869e56320056e83524f991c00d90b8 ChangeLog 30595
 MISC metadata.xml 156 RMD160 3e105a159e09ab3231aaa16b01919bcfbf58a0a8 SHA1 fe63ba71f6fd04f1e293fb238af2eba994b0335d SHA256 64d20c782589b423a6e75ba6fff7edead1ec8fbae742d27dd57f5299e8328500
 MD5 f3583430b2f7b0686cafd606b08bf203 metadata.xml 156
 RMD160 3e105a159e09ab3231aaa16b01919bcfbf58a0a8 metadata.xml 156
@@ -16,3 +21,6 @@ SHA256 64d20c782589b423a6e75ba6fff7edead1ec8fbae742d27dd57f5299e8328500 metadata
 MD5 8bf88614aa3380f617d57428708cda96 files/digest-gvim-7.0.201 771
 RMD160 225cd90706a9a3f17646e046dd6c2767ac52d26d files/digest-gvim-7.0.201 771
 SHA256 310cdb94903a866f3c63299566b88821d73a15f2a0c10baad928104ffe8c6f9f files/digest-gvim-7.0.201 771
+MD5 78e11585cae3c9eb5ada5e2e69b520ac files/digest-gvim-7.0.235 771
+RMD160 a8a3c435a71dc5c6bad949a619b1d6e7f3c4ba96 files/digest-gvim-7.0.235 771
+SHA256 b1bda3fa3d3953ec50943d5179d29304c5c89f58d46ffcb32f3a6bea390b9715 files/digest-gvim-7.0.235 771
