@@ -1,0 +1,9 @@
+MD5 a55e36b3c7a21a5835a35574d1f6595e vim-7.0-gentoo-patches-r1.tar.bz2 6749
+RMD160 88cead14b07bc3b7113a3e60f2b358caf501c789 vim-7.0-gentoo-patches-r1.tar.bz2 6749
+SHA256 17934badbe1288149a31ac309c17b579a0c33a409b5928a759620631c4a1ec7c vim-7.0-gentoo-patches-r1.tar.bz2 6749
+MD5 e8c8bb2b5c03f49d40e9736b7d479b9b vim-7.0-r1.tar.bz2 6117202
+RMD160 d24982a1b802dad9955940365665163a4641fd74 vim-7.0-r1.tar.bz2 6117202
+SHA256 e7383b2dfdc6f6df52fb45599eb6c5dc9037b1d3a4077bfe770cb98440b2589e vim-7.0-r1.tar.bz2 6117202
+MD5 c8dc25c06ecee41f9eaae088f3012103 vim-patches-7.0.235.tar.gz 343289
+RMD160 c54e63fbc74250e95d2ba242a66cea99ffffeff1 vim-patches-7.0.235.tar.gz 343289
+SHA256 0833aae00440155a6b5c507ecdcc00b743889c578b47a967fc4ae9ea456d5779 vim-patches-7.0.235.tar.gz 343289
