@@ -1,0 +1,47 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/gvim-7.0.235.ebuild,v 1.1 2007/04/29 22:28:28 pioto Exp $
+
+EAPI="prefix"
+
+inherit vim
+
+VIM_VERSION="7.0"
+VIM_SNAPSHOT="vim-7.0-r1.tar.bz2"
+VIM_GENTOO_PATCHES="vim-7.0-gentoo-patches-r1.tar.bz2"
+VIM_ORG_PATCHES="vim-patches-${PV}.tar.gz"
+GVIMRC_FILE_SUFFIX="-r1"
+
+SRC_URI="${SRC_URI}
+	mirror://gentoo/${VIM_SNAPSHOT}
+	mirror://gentoo/${VIM_GENTOO_PATCHES}
+	mirror://gentoo/${VIM_ORG_PATCHES}"
+
+S=${WORKDIR}/vim${VIM_VERSION/.*}
+DESCRIPTION="GUI version of the Vim text editor"
+KEYWORDS="~amd64 ~ia64 ~x86"
+IUSE="aqua gnome gtk motif nextaw"
+PROVIDE="virtual/editor"
+DEPEND="${DEPEND}
+	~app-editors/vim-core-${PV}
+	|| ( x11-libs/libXext virtual/x11 )
+	!aqua? (
+		gtk? (
+			>=x11-libs/gtk+-2.6
+			virtual/xft
+			gnome? ( >=gnome-base/libgnomeui-2.6 )
+		)
+		!gtk? (
+			motif? (
+				x11-libs/openmotif
+			)
+			!motif? (
+				nextaw? (
+					x11-libs/neXtaw
+				)
+				!nextaw? (
+					|| ( x11-libs/libXaw virtual/x11 )
+				)
+			)
+		)
+	)"
