@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/gvim
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/ChangeLog,v 1.221 2007/03/21 16:03:48 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/ChangeLog,v 1.222 2007/04/29 22:28:28 pioto Exp $
+
+  29 Apr 2007; Mike Kelly <pioto@gentoo.org> +gvim-7.0.235.ebuild:
+  Version bump. Fixes 2 security issues with modelines and other bugs.
 
   21 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> gvim-7.0.174.ebuild:
   Stable on alpha/ia64 wrt bug #167816.
